--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,1 +1,48 @@
-<p>signup works!</p>
+<div class="page">
+    <mat-card class="signup-form-container-card">
+      <form [formGroup]="authForm">
+        Already registered? <a routerLink="/signin">Sign-in here</a>
+        <div class="container">
+          <!-- Username -->
+          <mat-form-field>
+            <input matInput 
+                placeholder="Username" 
+                formControlName="username" 
+                required>
+            <mat-error>
+              Username required
+            </mat-error>
+          </mat-form-field>
+          <!-- Password -->
+          <div>
+            <mat-form-field style="width: 100%">
+              <mat-label>Password</mat-label>
+              <input matInput
+                formControlName="password" 
+                placeholder="Password"
+                autocomplete="off"
+                required>
+              <mat-error>
+                Password is not valid
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <!-- Confirm Password -->
+          <mat-form-field>
+            <input matInput 
+                placeholder="Confirm Password" 
+                formControlName="passwordConfirmation" 
+                autocomplete="off"
+                required>
+            <mat-error>
+                Passwords don't match
+            </mat-error>
+          </mat-form-field>
+          
+          <!-- Signup Button -->
+          <button mat-raised-button color="primary" type="submit">Register
+          </button>
+        </div>
+      </form>
+    </mat-card>
+  </div>
