--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -4,42 +4,11 @@
         Already registered? <a routerLink="/signin">Sign-in here</a>
         <div class="container">
           <!-- Username -->
-          <mat-form-field>
-            <input matInput 
-                placeholder="Username" 
-                formControlName="username" 
-                required>
-            <mat-error>
-              Username required
-            </mat-error>
-            
-          </mat-form-field>
-          {{authForm.get('username')?.errors | json }}
+          <app-input inputType="text" label="Username" [control]="authForm.get('username')"></app-input>
           <!-- Password -->
-          <div>
-            <mat-form-field style="width: 100%">
-              <mat-label>Password</mat-label>
-              <input matInput
-                formControlName="password" 
-                placeholder="Password"
-                autocomplete="off"
-                required>
-              <mat-error>
-                Password is not valid
-              </mat-error>
-            </mat-form-field>
-          </div>
+          <app-input inputType="password" label="Password" [control]="authForm.get('password')"></app-input>
           <!-- Confirm Password -->
-          <mat-form-field>
-            <input matInput 
-                placeholder="Confirm Password" 
-                formControlName="passwordConfirmation" 
-                autocomplete="off"
-                required>
-            <mat-error>
-                Passwords don't match
-            </mat-error>
-          </mat-form-field>
+          <app-input inputType="password" label="Confirm Password" [control]="authForm.get('passwordConfirmation')"></app-input>
           
           <!-- Signup Button -->
           <button mat-raised-button color="primary" type="submit">Register
