--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,1 +1,31 @@
-<p>input works!</p>
+<mat-form-field style="width: 100%">
+    <mat-label>{{label}}</mat-label>
+    <input 
+        [type] = "inputType"
+        matInput 
+        placeholder="Username" 
+        autocomplete="off" 
+        [formControl]="control" 
+        required >
+
+    <div *ngIf="showErrors()">
+        <mat-error *ngIf="control.errors.required">
+            Value is required
+        </mat-error>
+        <mat-error *ngIf="control.errors.minlength">
+            Value you entered is {{control.errors.minlength.actualLength}} characters long, but must be at least {{ control.errors.minlength.requiredLength }}
+        </mat-error>
+        <mat-error *ngIf="control.errors.maxlength">
+            Value you entered is {{control.errors.maxlength.actualLength}} characters long, but must be at most {{ control.errors.maxlength.requiredLength }}
+        </mat-error>
+        <mat-error *ngIf="control.errors.pattern">
+            Invalid format
+        </mat-error>
+        <mat-error *ngIf="control.errors.nonUniqueUsername">
+            Username is taken
+        </mat-error>
+        <mat-error *ngIf="control.errors.noConnection">
+            No Connection
+        </mat-error>
+    </div>
+</mat-form-field>
