--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,7 +1,11 @@
 <div class="page">
-  <mat-card class="signup-form-container-card">
-    <form [formGroup]="authForm">
-      Already registered? <a routerLink="/signin">Sign-in here</a>
+  <mat-card class="signup-card">
+    <mat-card-header>
+      <mat-card-title>Signup</mat-card-title>
+      <mat-card-subtitle>Already registered? <a routerLink="/signin">Signup here</a></mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+    <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
       <div class="container">
         <!-- Username -->
         <app-input inputType="text" label="Username" [control]="authForm.get('username')"></app-input>
@@ -14,7 +18,6 @@
         <!-- Signup Button -->
         <button mat-raised-button color="primary" type="submit">Register
         </button>
-
         <div *ngIf="
             authForm.get('password')?.touched && 
             authForm.get('passwordConfirmation')?.touched && 
@@ -22,8 +25,15 @@
           <mat-error *ngIf="authForm?.errors?.['passwordsDontMatch']">
             Passwords don't match
           </mat-error>
+          <mat-error *ngIf="authForm?.errors?.['noConnection']">
+            No Internet Connection
+          </mat-error>
+          <mat-error *ngIf="authForm?.errors?.['unknownError']">
+            Failed to Signup
+          </mat-error>
         </div>
       </div>
     </form>
+  </mat-card-content>
   </mat-card>
 </div>
