--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<mat-toolbar color="primary">
+    <a routerLink="/">
+        Email Client
+    </a>
+    <span class="fill-remaining-space"></span>
+    <button mat-button><a routerLink="/inbox">Inbox</a></button>
+    <button mat-button><a routerLink="/signout">SignOut</a></button>
+    <button mat-button><a routerLink="/">SignIn</a></button>
+    <button mat-button><a routerLink="/signup">SignUp</a></button>
+</mat-toolbar>
 <router-outlet></router-outlet>
