behaviorsubject to track logged in state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,13 @@
         Email Client
     </a>
     <span class="fill-remaining-space"></span>
-    <button mat-button><a routerLink="/inbox">Inbox</a></button>
-    <button mat-button><a routerLink="/signout">SignOut</a></button>
-    <button mat-button><a routerLink="/">SignIn</a></button>
-    <button mat-button><a routerLink="/signup">SignUp</a></button>
+    <div *ngIf="signedin">
+        <button mat-button><a routerLink="/inbox">Inbox</a></button>
+        <button mat-button><a routerLink="/signout">SignOut</a></button>
+    </div>
+    <div *ngIf="!signedin">
+        <button mat-button><a routerLink="/">SignIn</a></button>
+        <button mat-button><a routerLink="/signup">SignUp</a></button>
+    </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
