--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -2,7 +2,7 @@
   <mat-card class="signup-card">
     <mat-card-header>
       <mat-card-title>Signup</mat-card-title>
-      <mat-card-subtitle>Already registered? <a routerLink="/signin">Signup here</a></mat-card-subtitle>
+      <mat-card-subtitle>Already registered? <a routerLink="/">Signup here</a></mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
     <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
