--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,1 +1,31 @@
-<p>signin works!</p>
+<div class="page">
+    <mat-card class="signin-card">
+        <mat-card-header>
+            <mat-card-title>Signin</mat-card-title>
+            <mat-card-subtitle>Not registered? <a routerLink="/signup">Signup here</a></mat-card-subtitle>
+          </mat-card-header>
+    
+    <mat-card-content>
+        <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
+            <div class="container">
+                <!-- Username -->
+                <app-input inputType="text" label="Username" [control]="authForm.get('username')"></app-input>
+
+                <!-- Password -->
+                <app-input inputType="password" label="Password" [control]="authForm.get('password')"></app-input>
+
+                <!-- Signup Button -->
+                <button mat-raised-button color="primary" type="submit">
+                    Signin
+                </button>
+
+                <div>
+                    <mat-error *ngIf="authForm.errors">
+                        Invalid Credentials
+                      </mat-error>
+                </div>
+            </div>
+        </form>
+    </mat-card-content>
+</mat-card>
+</div>
