--- a/src/app/inbox/placeholder/placeholder.component.html
+++ b/src/app/inbox/placeholder/placeholder.component.html
@@ -1,13 +1,13 @@
 <div class ="main-card">
     
-    <mat-card *ngIf="email">
+    <mat-card>
         <mat-card-header>
-            <mat-card-title>{{email.subject}}</mat-card-title>
-            <mat-card-subtitle>From: {{email.from}}</mat-card-subtitle>
+            <mat-card-title>title</mat-card-title>
+            <mat-card-subtitle>from</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
             <p>
-              {{email.html}}
+              Select an email
             </p>
           </mat-card-content>
     </mat-card>
