--- a/src/app/inbox/home/home.component.html
+++ b/src/app/inbox/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="container">
+    <div class="grid">
+        <div class="title">
+            <button mat-raised-button color="primary">Compose E-Mail</button>
+        </div>
+        <div class="menu">
+            <app-email-index></app-email-index>
+        </div>
+        <div class="main">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
