added email resolver

--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -1,6 +1,6 @@
 <div class ="main-card">
     
-    <mat-card *ngIf="email">
+    <mat-card>
         <mat-card-header>
             <mat-card-title>{{email.subject}}</mat-card-title>
             <mat-card-subtitle>From: {{email.from}}</mat-card-subtitle>
