--- a/src/app/inbox/email-index/email-index.component.css
+++ b/src/app/inbox/email-index/email-index.component.css
@@ -23,3 +23,14 @@ a.active::before {
     font-size: 20px;
     margin-left: 10px;
 }
+
+.content {
+    width: 90%;
+}
+
+.trim {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
+}
