--- a/src/app/inbox/email-index/email-index.component.html
+++ b/src/app/inbox/email-index/email-index.component.html
@@ -4,7 +4,7 @@
             <a [routerLink]="email.id" routerLinkActive="active">
             <mat-card-header>
                 <mat-card-title>{{email.subject}}</mat-card-title>
-                <mat-card-subtitle>{{email.from}}</mat-card-subtitle>
+                <mat-card-subtitle>{{email.from | slice:0:25}}...</mat-card-subtitle>
             </mat-card-header>
         </a>
         </mat-card>
