--- a/src/app/inbox/email-show/email-show.component.html
+++ b/src/app/inbox/email-show/email-show.component.html
@@ -1,13 +1,12 @@
 <div class ="main-card">
-    
     <mat-card>
         <mat-card-header>
             <mat-card-title>{{email.subject}}</mat-card-title>
             <mat-card-subtitle>From: {{email.from}}</mat-card-subtitle>
+            <button mat-raised-button color="primary">Reply</button>
         </mat-card-header>
         <mat-card-content>
             <p [innerHTML]="email.html"></p>
           </mat-card-content>
     </mat-card>
-
 </div>
